syntax = "proto3";

service Markdown {
	rpc RenderMarkdown(RenderMarkdownRequest) returns (RenderMarkdownResponse) {}
}

message RenderMarkdownRequest {
	string source = 1;
}

message RenderMarkdownResponse {
	string html = 2;
}